# cpuminer-gc3355

./: Makefile.am  README.md  configure.ac  cpu-miner.c  gc3355-commands.h  gc3355.h  miner.h  util.c
software/cpuminer/: README.md  cpu-miner.c  gc3355.h
